# office-on-fire

./: CMakeLists.txt  README.md  build.sh  game.cpp  ghost.cpp  ghost.h  index.html  maze.cpp  maze.h  player.cpp  player.h  style.css
api/: config.js
assets/: explosion.m4a  fire_sound.m4a  gameover.m4a  get-item.m4a  hurt.m4a  level-complete.m4a
floors/: README.md  floor0.txt  floor1.txt  floor2.txt  floor3.txt  floor4.txt  floor5.txt  floor6.txt  floor7.txt
functions/getSupabaseSecrets/: index.js
